--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,3 +2,17 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/pm?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=
+
+# druid configure
+druid.initialSize=10
+druid.minIdle=10
+druid.maxActive=50
+druid.maxWait=60000
+druid.timeBetweenEvictionRunsMillis=60000
+druid.minEvictableIdleTimeMillis=300000
+druid.validationQuery=SELECT 1
+druid.testWhileIdle=true
+druid.testOnBorrow=false
+druid.testOnReturn=false
+druid.maxPoolPreparedStatementPerConnectionSize=20
+druid.poolPreparedStatements=false
