--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/pm?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://localhost:3306/pm?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
 jdbc.username=root
-jdbc.password=
+jdbc.password=Mickylily157766
 
 # druid configure
 druid.initialSize=10
