--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 ### Example user template
 
 # IntelliJ project files
-.idea
+.idea/
 out
 gen
 
@@ -31,3 +31,4 @@ gen
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 target/*
+*.iml
